# wtr

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
UserScripts/: WorkTimeCopier.js  setMonthlyAttendance.js  setPeriodMonthlyAttendance.js  submitSideJobSchedule.js
mytests/adder/src/: lib.rs
mytests/diesel_sample/: .env  .gitignore  Cargo.toml  diesel_sample.db
mytests/diesel_sample/migrations/2023-04-04-102627_create_posts/: up.sql
mytests/diesel_sample/src/: lib.rs
mytests/sqlx-sqlite-basics-tutorial/: .gitignore
mytests/sqlx-sqlite-basics-tutorial/migrations/: 20230405141510_users.sql  20230405142226_items.sql  (+1 more)
mytests/test_tauri_mui/: README.md  package-lock.json  package.json
mytests/test_webpack/: package-lock.json  package.json  webpack.config.js
src/: App.css  App.tsx  DateEditor.tsx  Header.tsx  types.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20230406150108_my_table.sql  20230430122643_works.sql
src-tauri/src/: lib.rs  main.rs  test.rs
src-tauri/tests/: integration_test.rs
tauri-wtr/: package.json
tauri-wtr/src-tauri/: Cargo.toml  tauri.conf.json
test_cheetah_grid/: package-lock.json  package.json
test_cheetah_grid/src/: App.tsx
test_mui_x/: package-lock.json  package.json
test_mui_x/src/: App.js  App.tsx
test_react/: package-lock.json  package.json
test_react_data_grid/: package-lock.json  package.json
test_react_data_grid/src/: App.css  App.js  App.tsx  DateEditor.js
test_react_datasheet/: package-lock.json  package.json
test_react_datasheet/src/: App.js
(+7 files in other folders)
