[package]
name = "diesel_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
# diesel = { version = "0.15.0", features = ["sqlite"] }
# diesel_codegen = { version = "0.15.0", features = ["sqlite"] }
# dotenv = "0.9.0"